--- a/index.html
+++ b/index.html
@@ -395,49 +395,49 @@
             <div class="row justify-content-between">
                 <div class="col-md-6 card_wrapp">
                     <div class="card_product">
-                        <img src="img/sec_my_articles/img_1.jpg" alt="">
+                        <img src="https://i.5sfer.com/post/postImage/thumb-2452zh9N3m.png" alt="">
                         <div class="card_body">
-                            <h4>Как избежать потерь от увольнения ключевого сотрудника?</h4>
-                            <span class="date">12 мая 2019 г. Константин Лашкевич</span>
+                            <h4>Почему не получится? Или как сделать, чтобы получилось!</h4>
+                            <span class="date">12 мая 2019 г. Виталий Бихунов</span>
                             <div class="hr"></div>
-                            <span class="tags">HR, Бизнес, Управление, Менеджмент </span>
+                            <span class="tags">Личные финансы, Бизнес, Управление</span>
+                            <a href="https://5sfer.com/24474-pochemu-ne-poluchit-sya-ili-kak-sdelat-chtoby-poluchilos.html" class="btn btn-blue" target="_blank">Читать полностью</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 card_wrapp">
+                    <div class="card_product">
+                        <img src="https://i.5sfer.com/post/postImage/thumb-AOyhUu1gkE.png" alt="">
+                        <div class="card_body">
+                            <h4>Не ищи призвание</h4>
+                            <span class="date">7 мая 2019 г. Виталий Бихунов</span>
+                            <div class="hr"></div>
+                            <span class="tags">Мышление, Личный бренд</span>
+                            <a href="https://5sfer.com/24453-ne-ishchi-prizvaniye.html" class="btn btn-blue" target="_blank">Читать полностью</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 card_wrapp">
+                    <div class="card_product">
+                        <img src="https://i.5sfer.com/post/postImage/thumb-osrBxECVZr.png" alt="">
+                        <div class="card_body">
+                            <h4>Радоваться сложностям?</h4>
+                            <span class="date">12 мая 2019 г. Виталий Бихунов</span>
+                            <div class="hr"></div>
+                            <span class="tags">Дисциплина, Уверенность</span>
                             <a href="" class="btn btn-blue">Читать полностью</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-6 card_wrapp">
                     <div class="card_product">
-                        <img src="img/sec_my_articles/img_2.jpg" alt="">
+                        <img src="https://i.5sfer.com/post/postImage/thumb-tPaPfiCepP.png" alt="">
                         <div class="card_body">
-                            <h4>Советы без «воды»: как директору подразделения стать СЕО</h4>
+                            <h4>Везение в бизнесе. Хорошо или плохо?</h4>
                             <span class="date">7 мая 2019 г. Константин Лашкевич</span>
                             <div class="hr"></div>
-                            <span class="tags">HR, Бизнес, Управление, Менеджмент </span>
-                            <a href="" class="btn btn-blue">Читать полностью</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card_product">
-                        <img src="img/sec_my_articles/img_3.jpg" alt="">
-                        <div class="card_body">
-                            <h4>Как правильно взаимодействовать с акционерами бизнеса?</h4>
-                            <span class="date">12 мая 2019 г. Константин Лашкевич</span>
-                            <div class="hr"></div>
-                            <span class="tags">Энергия,Успех, Менеджмент</span>
-                            <a href="" class="btn btn-blue">Читать полностью</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-6 card_wrapp">
-                    <div class="card_product">
-                        <img src="img/sec_my_articles/img_4.jpg" alt="">
-                        <div class="card_body">
-                            <h4>Кратный рост в карьере: как за 12 месяцев получить новую должность?</h4>
-                            <span class="date">7 мая 2019 г. Константин Лашкевич</span>
-                            <div class="hr"></div>
-                            <span class="tags">Энергия,Успех, Менеджмент</span>
-                            <a href="" class="btn btn-blue">Читать полностью</a>
+                            <span class="tags">Психология, Мышление, Деньги</span>
+                            <a href="https://5sfer.com/24537-vezeniye-v-biznese-khorosho-ili-plokho.html" class="btn btn-blue" target="_blank">Читать полностью</a>
                         </div>
                     </div>
                 </div>
@@ -455,17 +455,17 @@
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/9xA4GGZjQFA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Рассказиваю откуда берется силы для достижения целей</p>
+                        <p>выступление на Мега Тренинг 2019 Дворец Спорта</p>
                     </div>
                 </div>
                 <div class="col-md-6 card_wrapp">
                     <div class="card">
                         <div class="embed-responsive embed-responsive-16by9">
-                            <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                            <iframe src="https://www.youtube.com/embed/I7LDhxrAUTk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                         </div>
-                        <p>Все бизнесы рано или поздно достигают потолка роста, как его пробить?</p>
+                        <p>Феррари, Достижение мечты, правила успеха. Интервью Виталия Бихунова.</p>
                     </div>
                 </div>
             </div>
@@ -489,28 +489,29 @@
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/evgen.jpg');"></div>
-                        <h3>Евгений Маташ</h3>
-                        <p>Менеджер по работе с партнерами</p>
-                        <i>“В нашей компании проходил тренинг “Позитивного Менеджмента”. Я поставил себе две цели - которые смог достичь! Оказалось, все мои ограничения были сокрыты в моем мышлении. Я смог его изменить, и освоив новые инструменты, у
-                            меня получилось быстро вырасти!”</i>
+                        <h3>Дмитрий Шабля</h3>
+                        <p>владелец компании “Фабрика сцен”</p>
+                        <i>Когда пришел на обучение к Виталию, я зарабатывал порядка 3 тысяч долларов/мес. По окончанию курса, я закрыл финансовую цель и достиг отметки 12400$ в месяц. <a href="https://youtu.be/nu9YKM1XHIk"
+                                target="_blank">Видеоотзыв</a></i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vova.jpg');"></div>
-                        <h3>Владимир Сущенко</h3>
-                        <p>Проектный менеджер</p>
-                        <i>“Проходил обучение и продолжаю обучаться у Константина в “Акселератор Карьерного Роста: Практикум”. Методология позитивного менеджмента мне очень импонирует. Поначалу ее сложно внедрять, но спустя время, как команда
-                            привыкает к новым методикам - результаты кардинально меняются, в лучшую сторону. ”</i>
+                        <h3>Артем Бабурин</h3>
+                        <p>Владелец производства сумок “Бабурин”</p>
+                        <i>За время обучения, смог значительно расширить рынок продаж и настроить новые каналы продаж в соседние страны. Ввел новые товарные позиции. Пришел на проект, зарабатывая 600$, уже через месяц закрыл финансовую цель на 1200$
+                            <a href="https://youtu.be/tij6ekR95lQ" target="_blank">Видеоотзыв</a></i>
                     </div>
                 </div>
                 <div class="col-md-4 card_wrapp">
                     <div class="card_profile">
                         <div class="icon" style="background-image: url('img/sec_success_stories/vitaliy.jpg');"></div>
-                        <h3>Виталий Демьянец</h3>
-                        <p>Руководитель IT</p>
-                        <i>“Не могу сам поверить в происходящее. Всего 5 месяцев назад я только занял должность руководителя крупным IT-проектом. И вот сейчас я пишу этот отзыв на позиции Технического Директора. Программа Константина мне в этом очень
-                            помогла, и я здесь обрел не только инструментарий и развитие, но также хороших друзей и сильное окружение. ”</i>
+                        <h3>Дмитрий Гречко</h3>
+                        <p>компания по производству скалодромов.</p>
+                        <i>За время прохождения обучающей программы, смог четко поставить цель и отработал разные варианты ее достижения. У меня сработал отказ от мелких заказов с мелкими чеками и концентрация только на крупных заказах.
+                            Пришел на проект зарабатывая 3000$, закрыл за программу финансовую цель в сумме 7075$.
+                        </i>
                     </div>
                 </div>
             </div>
@@ -526,7 +527,7 @@
             <img alt="" class="abs_pic circle" src="img/abs_pic/circle.svg">
             <div class="sec_title">
                 <img src="img/sec_your_mentor/title_label.svg" alt="title_label">
-                <h2>Хочешь я стану твоим наставником в карьере и <br> бизнесе для кратного роста?</h2>
+                <h2>Хочешь я стану твоим наставником по достижению <br> твоих целей в бизнесе и жизни?</h2>
             </div>
             <div class="row">
                 <div class="col-md-6 img_wrapp">
@@ -534,7 +535,7 @@
                 </div>
                 <div class="col-md-6">
                     <div class="embed-responsive embed-responsive-16by9">
-                        <iframe src="https://www.youtube.com/embed/ZdODCz6y0kE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/3bM7B9hEefs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <a href="#" class="btn btn-success">Да хочу!</a>
                 </div>
@@ -543,7 +544,7 @@
     </section>
 
     <!-- sec_12 -->
-    <section class="sec sec_12">
+    <section class="sec sec_12 d-none">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
@@ -684,7 +685,7 @@
                                 if ($target.is(":focus")) { // Checking if the target was focused
                                     return false;
                                 } else {
-                                    $target.attr('tabindex', '-1'); // Adding tabindex for elements not focusable
+                                    $target.attr('tabindex', '-1'); // Adding tabindex for eёlements not focusable
                                     $target.focus(); // Set focus again
                                 };
                             });
