--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
                                     <td>101</td>
                                     <td>3</td>
                                     <td>6</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">2</th>
@@ -240,7 +240,7 @@
                                     <td>98</td>
                                     <td>6</td>
                                     <td>9</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">3</th>
@@ -248,7 +248,7 @@
                                     <td>11</td>
                                     <td>3</td>
                                     <td>4</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                                 <tr>
                                     <th scope="row">4</th>
@@ -256,7 +256,7 @@
                                     <td>76</td>
                                     <td>1</td>
                                     <td>11</td>
-                                    <td class="text-right"><a href="#" class="btn btn-blue">Задать вопрос</a></td>
+                                    <td class="text-right"><a href="https://www.facebook.com/spartavit" class="btn btn-blue" target="_blank">Задать вопрос</a></td>
                                 </tr>
                             </tbody>
                         </table>
@@ -294,72 +294,44 @@
                             <tr>
                                 <th scope="row">1</th>
                                 <td>
-                                    <a href="#" class="media">
+                                    <a href="https://p.smartexpert.net/social/YomtovShufotinski" class="media">
                                         <img src="img/sec_my_contacts/vitaliy.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                        <span>Йомтов Шуфотиснкий</span>
                                     </a>
                                 </td>
-                                <td class="expertise">Бизнес, Маркетинг, Продажи, Стартапы</td>
+                                <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>26</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/YomtovShufotinski" class="btn btn-blue" target="_blank">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">2</th>
                                 <td>
-                                    <a href="#" class="media">
+                                    <a href="https://p.smartexpert.net/social/mkp85kos" class="media">
                                         <img src="img/sec_my_contacts/icaac.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                        <span>Михайленков Константин</span>
                                     </a>
                                 </td>
                                 <td class="expertise">Мотивация, Личная эффективность, коучинг</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>44</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/mkp85kos" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
                                 <th scope="row">3</th>
                                 <td>
-                                    <a href="#" class="media">
+                                    <a href="https://p.smartexpert.net/social/to4kalovli" class="media">
                                         <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
+                                        <span>Крылов Александр</span>
                                     </a>
                                 </td>
                                 <td class="expertise">Управление, Менеджмент, командообразование</td>
                                 <td>26</td>
                                 <td>26</td>
                                 <td>54</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">4</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/igor.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Маркетинг, личный бренд, ораторство, коучинг </td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>6</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
-                            </tr>
-                            <tr>
-                                <th scope="row">5</th>
-                                <td>
-                                    <a href="#" class="media">
-                                        <img src="img/sec_my_contacts/iomtov.jpg" alt="">
-                                        <span>Виталий Тимошенко</span>
-                                    </a>
-                                </td>
-                                <td class="expertise">Финансы, Доходы, Деньги, Состояние, Счастье</td>
-                                <td>26</td>
-                                <td>26</td>
-                                <td>11</td>
-                                <td class="text-right"><a href="#" class="btn btn-blue">Подробнее</a></td>
+                                <td class="text-right"><a href="https://p.smartexpert.net/social/to4kalovli" class="btn btn-blue" target="_blank">Подробнее</a></td>
                             </tr>
                         </tbody>
                     </table>
