--- a/index.html
+++ b/index.html
@@ -66,8 +66,7 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель сообщества активных людей Катана Груп</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель и ведущий тренер обучающего проекта Катана Груп</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер IPS</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Бизнес Молодость - 4 место в рейтинге самых результативных тренеров мира по версии БМ 2018</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер Бизнес Молодость - 4 место в рейтинге самых результативных тренеров мира по версии БМ 2018</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер обучающей организации номер 1 в мире Success Resource</li>
                         </ul>
                     </div>
@@ -108,17 +107,25 @@
                 <div class="col-lg-7">
                     <div class="card">
                         <img src="img/sec_bio/quote.svg" alt="quote" class="quote">
-                        <p>Приветствую, Друзья! <br> Меня зовут Виталий Бихунов. Я:
-                            основатель ТМ Мега Турник
-                            владелец Мега Продкшн
-                            основатель сообщества активных людей Катана Груп
-                            основатель и ведущий тренер обучающего проекта Катана Груп
-                            Сертифицированный бизнес тренер IPS
+                        <p>
+                            Приветствую вас, Друзья! <br>
+                            Меня зовут Виталий Бихунов. Уже более 20 лет я занимаюсь бизнесом и, за это время, открыл несколько компаний, которые успешно растут и развиваются. Также, увлекаюсь спортом, режиссурой и другими увлекательными проектами.
                         </p>
-                        <p>Сертифицированный бизнес тренер Бизнес Молодость - 4 место в рейтинге самых результативных тренеров мира по версии БМ 2018
-                            Сертифицированный бизнес тренер обучающей организации номер 1 в мире Success Resource
+                        <p>
+                            В какой-то момент, обратил внимание, что все прорывы в бизнесе, спорте и других сферах жизни случались именно тогда, когда происходило какое-то осознание.
                         </p>
-                        <p class="font-weight-bold"><i>С огромным удовольствием помогу вам достичь вашей личной цели. Или помогу вывести ваш бизнес на новый уровень и кратно увеличить прибыль.</i> </p>
+                        <p>
+                            Увидев это, начал изучать большое количество литературы, посещать обучающие мероприятия по всему миру и общаться с успешными людьми, для того, чтобы понять какие стратегии они используют для достижения целей.
+                        </p>
+                        <p>
+                            В результате, создал несколько обучающих программ, в которых собрал лучшие техники и механики достижения целей со всего мира.
+                        </p>
+                        <p>
+                            Благодаря этим стратегиям сотни моих учеников смогли добиться своих целей и сделать шаг из борьбы за выживание в яркую и насыщенную жизнь.
+                        </p>
+                        <p class="font-weight-bold">
+                            С удовольствием поделюсь с тобой этими техниками. Твоя мечта стоит того, чтобы ее осуществить!
+                        </p>
                     </div>
                 </div>
             </div>
