--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><img src="img/logo.svg" alt=""></a>
+        <a class="navbar-brand" href="#"><span>Katana Group</span></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
@@ -58,7 +58,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <h1>Виталий Бихунов</h1>
-                    <p class="undertitle">основатель ТМ Мега Турник, <br> сообщества активных людей Катана Груп <br> основатель и ведущий тренер <br> обучающего проекта Катана Груп </p>
+                    <p class="undertitle">основатель ТМ Мега Турник, <br> сообщества активных людей Катана Груп, <br> основатель и ведущий тренер <br> обучающего проекта Катана Груп </p>
                     <div class="card">
                         <ul>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель ТМ Мега Турник</li>
@@ -67,7 +67,7 @@
                             <li><img src="img/sec_1/ok.svg" alt="ok">Основатель и ведущий тренер обучающего проекта Катана Груп</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер IPS</li>
                             <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер Бизнес Молодость - 4 место в рейтинге самых результативных тренеров мира по версии БМ 2018</li>
-                            <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер обучающей организации номер 1 в мире Success Resource</li>
+                            <li><img src="img/sec_1/ok.svg" alt="ok">Сертифицированный бизнес тренер обучающей организации номер 1 в мире Success Resources</li>
                         </ul>
                     </div>
                     <div class="works d-none">
