insert new logo

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <!-- fixed header -->
     <nav class="navbar navbar-expand-md fixed-top">
-        <a class="navbar-brand" href="#"><span>Katana Group</span></a>
+        <a class="navbar-brand" href="#"><img src="img/0001.jpg" alt="logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <img src="img/nav/burger.svg" alt="burger">
