--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <div class="soc_links_wrapp">
                             <a href="https://www.facebook.com/safronovlife" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                             <a href="https://vk.com/safronov4brain" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                            <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                            <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
                         </div>
                     </div>
                 </div>
@@ -265,7 +265,7 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <th scope="row">2</th>
+                                <th scope="row">1</th>
                                 <td>
                                     <a href="#" class="media">
                                         <img src="img/sec_my_contacts/icaac.jpg" alt="">
@@ -279,7 +279,7 @@
                                 <td class="text-right"><a href="https://p.smartexpert.net/social/Isaac2019" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
-                                <th scope="row">3</th>
+                                <th scope="row">2</th>
                                 <td>
                                     <a href="#" class="media">
                                         <img src="img/sec_my_contacts/vitaliy_d.jpg" alt="">
@@ -293,7 +293,7 @@
                                 <td class="text-right"><a href="https://p.smartexpert.net/social/lingvocoaching" class="btn btn-blue">Подробнее</a></td>
                             </tr>
                             <tr>
-                                <th scope="row">5</th>
+                                <th scope="row">3</th>
                                 <td>
                                     <a href="#" class="media">
                                         <img src="img/sec_my_contacts/iomtov.jpg" alt="">
@@ -514,7 +514,7 @@
                     <div class="soc_links_wrapp mx-md-auto">
                         <a href="https://www.facebook.com/safronovlife" class="item"><img src="img/soc_links/fb.svg" alt="fb"></a>
                         <a href="https://vk.com/safronov4brain" class="item"><img src="img/soc_links/vk.svg" alt="vk"></a>
-                        <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/in.svg" alt="in"></a>
+                        <a href="https://www.instagram.com/safronov4brain/" class="item"><img src="img/soc_links/inst.svg" alt="in" width="26px"></a>
                     </div>
                 </div>
                 <div class="col-md-3">
