--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="col-xl-7 col-md-6 right-col main-txt">
                     <h2>Хотите получить конкурентное преимущество в учебе, на работе или в бизнесе?</h2>
                     <p>Тем, кто жаждет выдающихся результатов, помогу раскрыть потенциал мозга, поделюсь инструментами и стратегиями эффективного обучения.</p>
-                    <a href="#" class="btn btn-blue">
+                    <a href="https://t.me/safronov4brain" target="_blank" class="btn btn-blue">
                         ДА, ХОЧУ
                     </a>
                 </div>
